# hass-gs-alarm

./: .gitignore  .releaserc.yaml  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt  sonar-project.properties  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yaml  release.yaml
custom_components/g90/: __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  manifest.json  strings.json  switch.py
custom_components/gs_alarm/: __init__.py  alarm_control_panel.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_base.py  manifest.json  mixin.py  number.py  select.py  sensor.py  strings.json  switch.py  text.py  utils.py
custom_components/gs_alarm/translations/: be.json  da.json  de.json  en.json  es.json  fr.json  it.json  nl.json  no-bok.json  no-nyn.json  pl.json  pt.json  ru.json  sv.json  uk.json
tests/: conftest.py  test_alarm_control_panel.py  test_binary_sensor_restore.py  test_callbacks.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_exceptions.py  test_init.py  test_number.py  test_option_flow.py  test_register_delete.py  test_select.py  test_sensor.py  test_switch.py  test_text.py
