[build-system]
requires = ["setuptools>=43.0.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "error"
# Workaround for
# https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/issues/129
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "pyg90alarm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "voluptuous"
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true
