[build-system]
requires = ["setuptools>=43.0.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "error"
# Workaround for
# https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/issues/129
asyncio_mode = "auto"
# Introduced by `pytest-asyncio` recently
asyncio_default_fixture_loop_scope = "function"

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.common"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.typing"
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true

[tool.pylint.main]
load-plugins = [
    "pylint_per_file_ignores",
]

[tool.pylint.'MESSAGES CONTROL']
per-file-ignores = [
    # Tests do have some duplicate code, but it is acceptable since those should
    # be as simple as possible, but no necessarily coded efficiently
    "/tests/*:duplicate-code",
]

